--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "codeception/codeception": "^3.1",
         "phalcon/ide-stubs": "^4.0.0",
         "squizlabs/php_codesniffer": "^3.5",
-        "vimeo/psalm": "^3.6"
+        "vimeo/psalm": "^3.6",
+        "phalcon/devtools": "~3.2"
     },
     "autoload": {
         "psr-4": {
